Room_LiveData fully functional

--- a/Room_LiveData/app/src/main/res/layout/content_main.xml
+++ b/Room_LiveData/app/src/main/res/layout/content_main.xml
@@ -9,12 +9,10 @@
     tools:showIn="@layout/activity_main">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/mRecyclerView"
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:background="@android:color/darker_gray"
+        tools:listitem="@layout/recyclerview_item" />
 
 </android.support.constraint.ConstraintLayout>
