--- a/Room_LiveData/app/src/main/res/values/dimens.xml
+++ b/Room_LiveData/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="list_fab_margin">8dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="small_padding">6dp</dimen>
+    <dimen name="big_padding">16dp</dimen>
 </resources>
